@@ -82,9 +82,7 @@
 
 # Path to sqlite regex extension. Note that mosquitto will fail to start if
 # this cannot be loaded.
-# If the extension at this path cannot be loaded, a fall back option of
-# /usr/lib/sqlite3-pcre.so will be used.
 # Default on Windows/Cygwin:
 #ext_sqlite_regex ./sqlite3-pcre.dll
 # Default on other platforms:
-#ext_sqlite_regex ./sqlite3-pcre.so
+#ext_sqlite_regex /usr/lib/sqlite3/pcre.so
